Add remove torrent route
