# docs/swagger.json
@@ -55,6 +55,45 @@
                 }
             }
         },
+        "/remove/{infoHash}": {
+            "get": {
+                "description": "remove torrent from service",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Remove Torrent",
+                "operationId": "remove-torrent",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "torrent info hash",
+                        "name": "infoHash",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "delete files",
+                        "name": "delete",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.MessageResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/settings/get": {
             "get": {
                 "description": "get settings in JSON object",
@@ -148,6 +187,15 @@
                 "error": {
                     "type": "string",
                     "example": "Houston, we have a problem!"
+                }
+            }
+        },
+        "api.MessageResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string",
+                    "example": "done"
                 }
             }
         },
